// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`drag-over-element 1`] = `
<div>
  <div
    className="schema-element highlighted undefined"
    onClick={[Function]}
    role="button"
  >
    Drag_over_element
  </div>
</div>
`;

exports[`mapped-element 1`] = `
<div>
  <div
    className="schema-element mapped undefined"
    onClick={[Function]}
    role="button"
  >
    Mapped_element
  </div>
</div>
`;

exports[`single-element 1`] = `
<div>
  <div
    className="schema-element undefined"
    onClick={[Function]}
    role="button"
  >
    Single_element
  </div>
</div>
`;
